--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "gh-pages": "^6.3.0",
     "prettier": "^3.7.4"
   },
-  "homepage": "https://yezinnie14-cloud.github.io/ZIO/"
+  "homepage": "https://daehyeonkim0326-sys.github.io/ZIO/"
 }
